# rf-asset-discovery

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: analyze_capture.md  capture.md  fm_radio.md  iot.md  prime.md  ralph-iot.md  ralph-scan.md  record_signal.md  scan_spectrum.md  survey.md  transform.md  watch.md
.claude/skills/rf-asset-discovery/: SKILL.md  best-practices.md  troubleshooting.md
.claude/skills/rf-asset-discovery/reference/: frequency-bands.md
.claude/skills/sdr-toolkit/: SKILL.md  best-practices.md  troubleshooting.md
.claude/skills/sdr-toolkit/reference/: frequency-bands.md
.streamlit/: config.toml
adws/: README.md  __init__.py  adw_sdr_analyze.py  adw_sdr_record.py  adw_sdr_scan.py  adw_spectrum_watch.py
adws/adw_modules/: __init__.py  agent.py  baseline.py  data_models.py  notifier.py  observability.py  survey_persistence.py  utils.py  watch_config.py
data/: example.duckdb
docs/: ARCHITECTURE.md  LESSONS-LEARNED.md  MEDALLION-PATTERN.md  RESULTS-SUMMARY.md
examples/: aircraft_listener.py  fm_listener.py  iot_discovery.py  multi_location.py  signal_promotion.py  signal_recorder.py  spectrum_survey.py  survey_workflow.py
exports/: rf_assets.csv
medallion-template/: README.md  cookiecutter.json
medallion-template/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
medallion-template/{{cookiecutter.project_slug}}/.claude/: CLAUDE.md
medallion-template/{{cookiecutter.project_slug}}/.claude/commands/: transform.md
medallion-template/{{cookiecutter.project_slug}}/data/: .gitkeep
medallion-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
medallion-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/apps/: __init__.py  transform.py
medallion-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/storage/: __init__.py  classification.py  models.py
notebooks/: 01_bronze_exploration.ipynb  02_silver_transformation.ipynb  03_gold_assets.ipynb  04_medallion_migration.ipynb
src/rf_asset_discovery/: __init__.py
src/rf_asset_discovery/apps/: __init__.py  am_radio.py  fm_radio.py  recorder.py  scanner.py  transform.py
src/rf_asset_discovery/apps/survey/: __init__.py  band_catalog.py  executor.py  manager.py
src/rf_asset_discovery/cli/: __init__.py  main.py
src/rf_asset_discovery/core/: __init__.py  device.py  exceptions.py
src/rf_asset_discovery/decoders/: __init__.py
src/rf_asset_discovery/decoders/iot/: __init__.py  classifier.py  device_registry.py  models.py  rtl433_wrapper.py
src/rf_asset_discovery/dsp/: __init__.py  demodulation.py  filters.py  spectrum.py
src/rf_asset_discovery/io/: __init__.py  audio.py  recording.py  sigmf.py
src/rf_asset_discovery/storage/: __init__.py  classification.py  delta_store.py  models.py  schema.sql  survey_models.py  unified_db.py
src/rf_asset_discovery/ui/: __init__.py  display.py
src/sdr_toolkit/: __init__.py
src/sdr_toolkit/apps/: __init__.py  am_radio.py  fm_radio.py  recorder.py  scanner.py  transform.py
src/sdr_toolkit/apps/survey/: __init__.py  band_catalog.py  executor.py  manager.py
src/sdr_toolkit/cli/: __init__.py  main.py
src/sdr_toolkit/core/: __init__.py  config.py  device.py
src/sdr_toolkit/decoders/: __init__.py  adsb.py
src/sdr_toolkit/decoders/iot/: __init__.py  classifier.py  device_registry.py  models.py  rtl433_wrapper.py
src/sdr_toolkit/dsp/: __init__.py  demodulation.py  filters.py  spectrum.py
src/sdr_toolkit/io/: __init__.py  audio.py  recording.py  sigmf.py
src/sdr_toolkit/storage/: __init__.py  classification.py  models.py  schema.sql  survey_models.py  unified_db.py
src/sdr_toolkit/ui/: __init__.py  display.py
tests/: __init__.py  conftest.py  test_adsb.py  test_apps.py  test_cli.py  test_demodulation.py  test_device.py  test_iot.py  test_observability.py  test_sigmf.py  test_spectrum.py  test_storage.py  test_survey_apps.py  test_survey_models.py  test_ui.py  test_watch.py
