[project]
name = "sdr-toolkit"
version = "0.1.0"
description = "Production-quality RTL-SDR toolkit with agentic capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SDR Toolkit Contributors"}]
keywords = ["sdr", "rtl-sdr", "radio", "signal-processing", "fm"]

dependencies = [
    "pyrtlsdr>=0.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7.0"]
agent = ["pydantic>=2.0.0"]
adsb = ["pyModeS>=2.0"]
ui = ["rich>=13.0"]
storage = [
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
]
delta = [
    "deltalake>=0.18.0",
    "pyarrow>=14.0.0",
]
watch = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "duckdb>=1.0.0",
]
all = [
    "sdr-toolkit[plot,agent,adsb,ui,storage,delta,watch,dev]",
]

[project.scripts]
sdr-fm = "sdr_toolkit.cli.main:fm_radio"
sdr-am = "sdr_toolkit.cli.main:am_radio"
sdr-scan = "sdr_toolkit.cli.main:scanner"
sdr-record = "sdr_toolkit.cli.main:recorder"
sdr-iot = "sdr_toolkit.cli.main:iot_scan"
sdr-watch = "sdr_toolkit.cli.main:spectrum_watch"
sdr-survey = "sdr_toolkit.cli.main:spectrum_survey"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdr_toolkit"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]  # self/cls type annotations

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=sdr_toolkit --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
