[project]
name = "rf-asset-discovery"
version = "0.1.0"
description = "RF asset discovery for OT/IoT security monitoring with medallion architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "RF Asset Discovery Contributors"}]
keywords = ["sdr", "rtl-sdr", "rf-security", "iot-security", "asset-discovery", "medallion-architecture", "ot-security"]

dependencies = [
    "pyrtlsdr>=0.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.6",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7.0"]
agent = ["pydantic>=2.0.0"]
adsb = ["pyModeS>=2.0"]
ui = ["rich>=13.0"]
storage = [
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
]
delta = [
    "deltalake>=0.18.0",
    "pyarrow>=14.0.0",
]
watch = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "duckdb>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "duckdb>=1.0.0",
]
all = [
    "rf-asset-discovery[plot,agent,adsb,ui,storage,delta,watch,dashboard,dev]",
]

[project.scripts]
rfad-fm = "rf_asset_discovery.cli.main:fm_radio"
rfad-am = "rf_asset_discovery.cli.main:am_radio"
rfad-scan = "rf_asset_discovery.cli.main:scanner"
rfad-record = "rf_asset_discovery.cli.main:recorder"
rfad-iot = "rf_asset_discovery.cli.main:iot_scan"
rfad-watch = "rf_asset_discovery.cli.main:spectrum_watch"
rfad-survey = "rf_asset_discovery.cli.main:spectrum_survey"
rfad-transform = "rf_asset_discovery.cli.main:medallion_transform"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rf_asset_discovery"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]  # self/cls type annotations

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=rf_asset_discovery --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
