[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
license = {text = "MIT"}
authors = [{name = "{{ cookiecutter.author }}"}]

dependencies = [
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
]

[project.scripts]
{{ cookiecutter.project_slug }}-transform = "{{ cookiecutter.project_slug }}.cli:transform"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]
